--- a/Phone/main/res/layout/old_general_need_help_footer.xml
+++ b/Phone/main/res/layout/old_general_need_help_footer.xml
@@ -13,19 +13,17 @@
             android:layout_height="wrap_content"
             android:text="@string/need_help_text"
             android:layout_centerHorizontal="true"
-            android:textStyle="bold" />
+            style="@style/body_copy" />
 
 	    <TextView
 	        android:id="@+id/help_number_label"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="8dp"
 	        android:layout_centerHorizontal="true"
 	        android:layout_below="@+id/need_help_label"
 	        android:text="@string/need_help_number_text"
-	        android:textColor="@color/blue"
-	        android:autoLink="phone"
-	        android:linksClickable="true" />
+	        style="@style/blue_hyperlink"
+	        android:padding="@dimen/content_padding"/>
     </RelativeLayout>  
 
 </merge>
