--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -36,7 +36,7 @@
 
     <style name="WhiteTheme">
         <item name="android:background">@drawable/light_gray_bkgrd</item>
-        <item name="android:padding">@dimen/content_padding</item>
+        <item name="android:padding">@dimen/forms_inner_padding</item>
     </style>
 
     <style name="WhiteThemeFooter">
@@ -49,7 +49,7 @@
     </style>
 
     <style name="call_to_action_theme">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@drawable/call_to_action_text_color</item>
         <item name="android:textSize">@dimen/body_copy_max</item>
         <item name="android:paddingLeft">@dimen/orange_button_left_right_padding</item>
         <item name="android:paddingRight">@dimen/orange_button_left_right_padding</item>
