US5240: Code commit for default table layout and transaction item.

--- a/Phone/main/res/layout/account_recent_activity.xml
+++ b/Phone/main/res/layout/account_recent_activity.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent"
+    android:background="@drawable/light_gray_bkgrd">
+	
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:orientation="vertical" 
+    	android:layout_marginTop="@dimen/groups_of_elements_padding" 
+	    android:layout_marginRight="@dimen/forms_inner_padding"
+	    android:layout_marginLeft="@dimen/forms_inner_padding"
+	    android:paddingBottom="@dimen/groups_of_elements_padding"
+	    style="@drawable/light_gray_bkgrd">
     
     
     <TextView
@@ -24,5 +34,5 @@
     	android:text="Search Transactions"/>
         
     
-
-</LinearLayout>
+	</LinearLayout>
+</ScrollView>
