--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -64,4 +64,7 @@
 	<string name="late_payment_modal_text">If we do not receive your minimum payment by the date listed above, you may have to pay a late fee of up to $35.00 and your purchase and balance transfer APRs for new transactions may be increased up to the Penalty APR of 15.99% variable.</string>
 	<string name="late_payment_modal_error_message">Some of our web site features are unavailable at this time. We sincerely apologize for this temporary inconvenience and are working to resolve the issue.</string>
 	<string name="late_payment_modal_error_title">We\'re Sorry</string>
+	
+	<!-- Recent Account Activity Strings -->
+	<string name="view_trans_actions_by_period">View Transactions by Activity Period:</string>
 </resources>
