US3685 - Forgot Password Step 1 : TA8724 - Updated text labels and removed some unnecessary XML from the layout. DE1592 FIXED - Updated error text. DE1595 FIXED - updated text. Moved date picker logic from AbstractAccountInformationActivity into the custom date picker classes. They now work much better too, they allow focusing, which will cause the previous field that was focused to update on it self (properly).

--- a/Commons/main/res/values/strings_customui.xml
+++ b/Commons/main/res/values/strings_customui.xml
@@ -6,4 +6,6 @@
 	<string name="birth_date_placeholder">
 	    Select Month/Day/Year
 	</string>
+	<string name="account_info_dob_text">Primary Cardmember\'s Birthday</string>
+    <string name="card_expiration_date_text">Card Expiration Date</string>
 </resources>
