--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -23,56 +23,10 @@
             android:padding="@dimen/forms_inner_padding" >
 
             <TextView
-                android:id="@+id/account_info_title_label"
-                style="@style/title_copy"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:text="@string/app_name"
-                android:visibility="invisible" />
-
-            <TextView
                 android:id="@+id/account_info_label_one_label"
                 style="@style/title_copy"
                 android:layout_below="@+id/account_info_error_label"
                 android:text="@string/account_info_label_one" />
-
-            <LinearLayout
-                android:id="@+id/account_number_fields"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/account_info_label_one_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:orientation="horizontal"
-                android:visibility="invisible" >
-
-                <com.discover.mobile.common.customui.SsnEditText
-                    android:id="@+id/account_number_field_one"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/between_related_elements_padding"
-                    android:imeOptions="actionNext"
-                    android:nextFocusDown="@+id/account_number_field_two" />
-
-                <com.discover.mobile.common.customui.SsnEditText
-                    android:id="@+id/account_number_field_two"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/between_related_elements_padding"
-                    android:imeOptions="actionNext" />
-
-                <com.discover.mobile.common.customui.SsnEditText
-                    android:id="@+id/account_number_field_three"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/between_related_elements_padding"
-                    android:imeOptions="actionNext" />
-
-                <com.discover.mobile.common.customui.SsnEditText
-                    android:id="@+id/account_number_field_four"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:imeOptions="actionNext" />
-            </LinearLayout>
 
             <com.discover.mobile.common.customui.UsernameOrAccountNumberEditText
                 android:id="@+id/account_info_main_input_field"
@@ -80,7 +34,8 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_label_one_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:imeOptions="actionDone"/>
+                android:imeOptions="actionDone"
+                android:textCursorDrawable="@null"/>
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
@@ -94,8 +49,6 @@
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_main_input_field"
                 android:text="@string/invalid_input" >
-
-                <requestFocus />
             </TextView>
 
             <TextView
@@ -123,7 +76,8 @@
                 android:layout_below="@+id/account_info_ssn_info_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
-                android:imeOptions="actionDone" />
+                android:imeOptions="actionDone" 
+                android:textCursorDrawable="@null"/>
 
             <TextView
                 android:id="@+id/account_info_ssn_prefix_label"
@@ -140,7 +94,8 @@
                 android:id="@+id/account_info_ssn_error_label"
                 style="@style/error_label"
                 android:layout_below="@+id/account_info_ssn_input_field"
-                android:text="@string/invalid_input" />
+                android:text="@string/invalid_input" 
+                android:layout_alignLeft="@+id/account_info_ssn_input_field"/>
 
             <TextView
                 android:id="@+id/account_info_dob_label"
@@ -170,8 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="validateInfoAndSubmitOnSuccess"
-                    android:text="@string/continue_text" 
-                    android:enabled="false"/>
+                    android:text="@string/continue_text"/>
 
                 <Button
                     android:id="@+id/account_info_cancel_button"
@@ -188,8 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_card_expiration_date_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:onClick="showCardDatePickerDialog" />
+                android:layout_marginTop="@dimen/between_related_elements_padding" />
 
             <TextView
                 android:id="@+id/account_info_expiration_date_error_label"
@@ -202,8 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_dob_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:onClick="showBirthDatePickerDialog" />
+                android:layout_marginTop="@dimen/between_related_elements_padding" />
 
             <RelativeLayout
                 android:layout_width="fill_parent"
