--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -1,7 +1,6 @@
 <resources>
     
     <!-- Account Info Screen 1 -->
-	<string name="account_info_one_step_text">Step 1 of 2: Enter Account Information</string>
     <string name="account_info_dob_text">Primary Cardmember\'s Birthday</string>
 	<string name="account_info_ssn_info_text">Primary Cardmember\'s Social Security Number (Last 4 Digits)</string>
 	<string name="account_info_bad_input_error_text">
@@ -15,7 +14,7 @@
 	</string>
 
 	<string name="account_info_input_restrictions_label">This is a 16&#8211;digit number starting with 6011.
-	    Do not include space or hyphens.
+	    Do not include spaces or hyphens.
 	</string>
 	
 	<!-- Account Info Screen 2 -->
