--- a/Phone/main/res/values/strings_login.xml
+++ b/Phone/main/res/values/strings_login.xml
@@ -33,17 +33,11 @@
     <string name="remember_user_id">
         Remember User ID
     </string>
-    <string name="password_placeholder">
+    <string name="password">
         Password
     </string>
-    <string name="password">
-        Password:
-    </string>
-    <string name="username_placeholder">
-        Username
-    </string>
     <string name="user_id">
-        User ID:
+        User ID
     </string>
     <string name="vertical_separator">
         |
