US3675 - Re-enabled continue button. Added default error catching if a server error is not specifically handled.

--- a/Phone/main/res/layout/register_forgot_id.xml
+++ b/Phone/main/res/layout/register_forgot_id.xml
@@ -93,8 +93,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/orange_button_margin_top"
             android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/submit_text" 
-            android:enabled="false"/>
+            android:text="@string/submit_text" />
 
         <TextView
             android:id="@+id/account_info_cancel_label"
