US3690 - Forgot Password Step 2 : TA8735 - more UI and functional updates. Made phone number clickable. Added and configured strength meter and confirmaoin field. Added null checks to the common methods that hide and show views.

--- a/Phone/main/res/layout/register_create_password.xml
+++ b/Phone/main/res/layout/register_create_password.xml
@@ -11,7 +11,8 @@
     <ScrollView
         android:id="@+id/main_scroll_view"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent" 
+        android:layout_below="@id/header">
 
         <RelativeLayout
             style="@style/WhiteTheme"
@@ -54,10 +55,11 @@
             <com.discover.mobile.login.register.CredentialStrengthEditText
                 android:id="@+id/account_info_two_pass_field"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/forgot_pass_two_pass_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:imeOptions="actionNext" />
+                android:imeOptions="actionNext" 
+                android:textCursorDrawable="@null"/>
 
             <TextView
                 android:id="@+id/enter_new_pass_error_one_label"
@@ -97,11 +99,12 @@
             <com.discover.mobile.common.customui.ConfirmationEditText
                 android:id="@+id/account_info_two_pass_confirm_field"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_two_pass_confirm_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionDone"
-                android:inputType="textPassword" />
+                android:inputType="textPassword" 
+                android:textCursorDrawable="@null"/>
 
             <TextView
                 android:id="@+id/enter_new_pass_error_two_label"
@@ -139,11 +142,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_cancel_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding" >
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:layout_centerHorizontal="true" >
 
                 <include layout="@layout/old_general_need_help_footer" />
-
-                <include layout="@layout/old_general_copyright_footer" />
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
