US3690 : Forgot Password Step 2 -  Minor UI updates and functionality work.

--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -35,7 +35,7 @@
                 android:layout_below="@+id/account_info_label_one_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionDone"
-                android:textCursorDrawable="@null"/>
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
@@ -76,8 +76,8 @@
                 android:layout_below="@+id/account_info_ssn_info_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:layout_toRightOf="@+id/account_info_ssn_prefix_label"
-                android:imeOptions="actionDone" 
-                android:textCursorDrawable="@null"/>
+                android:imeOptions="actionDone"
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_ssn_prefix_label"
@@ -93,9 +93,9 @@
             <TextView
                 android:id="@+id/account_info_ssn_error_label"
                 style="@style/error_label"
+                android:layout_alignLeft="@+id/account_info_ssn_input_field"
                 android:layout_below="@+id/account_info_ssn_input_field"
-                android:text="@string/invalid_input" 
-                android:layout_alignLeft="@+id/account_info_ssn_input_field"/>
+                android:text="@string/invalid_input" />
 
             <TextView
                 android:id="@+id/account_info_dob_label"
@@ -110,32 +110,28 @@
                 android:layout_below="@+id/account_info_birth_date_picker"
                 android:text="@string/invalid_input" />
 
-            <LinearLayout
-                android:id="@+id/account_info_button_row"
+            <Button
+                android:id="@+id/account_info_continue_button"
+                style="@style/call_to_action_theme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_birth_date_picker"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/orange_button_margin_top"
                 android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:orientation="vertical" >
+                android:onClick="validateInfoAndSubmitOnSuccess"
+                android:text="@string/continue_text" />
 
-                <Button
-                    android:id="@+id/account_info_continue_button"
-                    style="@style/call_to_action_theme"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="validateInfoAndSubmitOnSuccess"
-                    android:text="@string/continue_text"/>
-
-                <Button
-                    android:id="@+id/account_info_cancel_button"
-                    style="@style/blue_hyperlink"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/none"
-                    android:onClick="goBack"
-                    android:text="@string/cancel_text" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/account_info_cancel_button"
+                style="@style/blue_hyperlink"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_continue_button"
+                android:layout_centerHorizontal="true"
+                android:background="@color/none"
+                android:onClick="goBack"
+                android:text="@string/cancel_text" />
 
             <com.discover.mobile.common.customui.CardExpirationDatePicker
                 android:id="@+id/account_info_card_exp_date_picker"
@@ -160,8 +156,8 @@
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/account_info_button_row"
-                android:layout_marginTop="@dimen/orange_button_margin_top" >
+                android:layout_below="@+id/account_info_cancel_button"
+                android:layout_marginTop="@dimen/groups_of_elements_padding" >
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
