--- a/Phone/main/res/layout/register_create_password.xml
+++ b/Phone/main/res/layout/register_create_password.xml
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
-                android:text="@string/invalid_input" />
+                android:text="@string/account_info_two_passwords_dont_match_text" />
 
             <Button
                 android:id="@+id/account_info_two_submit_button"
