--- a/Phone/main/res/values/strings_account_info.xml
+++ b/Phone/main/res/values/strings_account_info.xml
@@ -68,6 +68,10 @@
 	<!-- Recent Account Activity Strings -->
 	<string name="view_trans_actions_by_period">View Transactions by Activity Period:</string>
 	<string name="recent_activity_since">Recent Activity Since </string>
-	<string name="narrow_list">To narrow list, </string>
-	<string name="search_transactions"> search transactions.</string>
+	<string name="recent_activity_narrow_list">To narrow list, </string>
+	<string name="recent_activity_search_transactions"> search transactions.</string>
+	<string name="recent_activity_transactions">Transactions</string>
+	<string name="recent_activity_posted_transactions">Posted Transactions</string>
+	<string name="recent_activity_pending_transactions">Pending Transactions</string>
+	<string name="recent_activity_load_more">Load More</string>
 </resources>
