--- a/Phone/main/res/layout/transaction_item.xml
+++ b/Phone/main/res/layout/transaction_item.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" 
-    android:weightSum="4"
-    android:background="@drawable/light_gray_bkgrd">
+    android:background="@drawable/home_list_item"
+    android:padding="@dimen/between_related_elements_padding">
     
     <TextView 
         android:id="@+id/transaction_date"
-    	android:layout_width="0dip"
+    	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	style="@style/body_copy"
     	android:text="08/01/13"
-    	android:layout_weight="1"/>
+    	android:layout_alignParentLeft="true"/>
     
     <TextView 
         android:id="@+id/transaction_description"
-    	android:layout_width="0dip"
+    	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	style="@style/body_copy"
     	android:text="Some Really Random Pub where you drank to much"
-    	android:layout_weight="2"/>
+    	android:layout_toRightOf="@+id/transaction_date"
+    	android:layout_toLeftOf="@+id/transaction_amount"
+    	android:layout_marginRight="@dimen/between_related_elements_padding"
+    	android:layout_marginLeft="@dimen/between_related_elements_padding"/>
     
     <TextView 
         android:id="@+id/transaction_amount"
-    	android:layout_width="0dip"
+    	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	style="@style/body_copy"
     	android:text="$50.00"
-    	android:layout_weight="1"/>
+    	android:layout_alignParentRight="true"/>
 
-</LinearLayout>
+</RelativeLayout>
